
add_library(interrupt STATIC
	INT0.cpp
	PCINT0.cpp
	TIM1_COMPA.cpp
	TIMER1_COMPA.cpp
	TIM1_OVF.cpp
	TIMER1_OVF.cpp
	TIM0_OVF.cpp
	TIMER0_OVF.cpp
	EE_RDY.cpp
	ANA_COMP.cpp
	ADC.cpp
	TIM1_COMPB.cpp
	TIMER1_COMPB.cpp
	TIM0_COMPA.cpp
	TIMER0_COMPA.cpp
	TIM0_COMPB.cpp
	TIMER0_COMPB.cpp
	WDT.cpp
	USI_START.cpp
	USI_OVF.cpp
)

